--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -186,6 +186,91 @@
    "source": [
     "get_prodict(x=2, y=\"3\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Download data from gdrive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://drive.google.com/file/d/1Sv4oGZbUC9BJW0P0syig7eeVlhBgSQ45/view?usp=sharing\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1Sv4oGZbUC9BJW0P0syig7eeVlhBgSQ45'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_id = url.split(\"/\")[-2]\n",
+    "file_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?/export=download&id=1Sv4oGZbUC9BJW0P0syig7eeVlhBgSQ45\n",
+      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=1Sv4oGZbUC9BJW0P0syig7eeVlhBgSQ45&confirm=t&uuid=7142020e-5b63-4506-b033-963c0d782619\n",
+      "To: c:\\Users\\MSI\\Desktop\\Kidney_Diseaase_Deep_Learning_Project\\Kidney_Disease_Classification_Deep_Learning_Project\\research\\kidney_ct_scan_data.zip\n",
+      "100%|██████████| 1.63G/1.63G [02:43<00:00, 9.95MB/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'kidney_ct_scan_data.zip'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prefix = 'https://drive.google.com/uc?/export=download&id='\n",
+    "gdown.download(prefix+file_id, \"kidney_ct_scan_data.zip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
